fix: better color for contact card on dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,8 @@
     --peach-quartz-dark: #df9d76;
 
     --nightsky-dark: #2C5364;
+    --nightsky-dark-transparent: #2C5364aa;
+
     --moonlit-asteroid: #203A43;
     --moonlit-asteroid-dark: #0F2027;
     --moonlit-asteroid-dark-transparent: #0f202744;
